crates/nirvash-macros/tests/fixtures/code_tests_legacy_action.stderr
error: action = ... is no longer supported; use binding = ... and implement ProtocolRuntimeBinding<Spec>
   --> tests/fixtures/code_tests_legacy_action.rs:119:46
    |
119 | #[code_tests(spec = Spec, binding = Binding, action = Action)]
    |                                              ^^^^^^
